# trs

./: Cargo.toml  README.md  big.sh  justfile
docs/: design.markdown
sample/: rss.xml  rss2.xml
src/: args.rs  commands.rs  error.rs  main.rs  parser.rs  persistence.rs  ui.rs
src/ui/: actions.rs  articles.rs  backend.rs  channels.rs  controls.rs  debug.rs  executor.rs  title.rs
