[package]
name = "trs"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
crossterm = "0.29.0"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.20", features = ["blocking"] }
rusqlite = { version = "0.36.0", features = ["bundled", "time"] }
time = { version = "0.3.41", features = ["parsing"] }
xml-rs = "0.8.26"
