[package]
name = "trs"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.20", features = ["blocking"] }
rusqlite = { version = "0.36.0", features = ["bundled", "time"] }
time = { version = "0.3.41", features = ["parsing"] }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.16", features = ["futures-util"] }
xml-rs = "0.8.26"

[profile.release]
strip = true
opt-level = "z"
lto = true
